--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -217,9 +217,11 @@
 
 .map{
 	display: block;
+	margin-bottom: 38px;
 	width: 100%;
 	height:350px;
 	background: url('../img/map.jpg') no-repeat;
 	background-size: 100% auto;
+
 }
 
