--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -52,7 +52,7 @@
 		text-align: center;
 		font-size: 18px;
 		line-height: 48px;
-		background-color: $blue;
+		background-color: $blue-base;
 		color: #fff;
 
 	}
