--- a/sass/pages/form.scss
+++ b/sass/pages/form.scss
@@ -72,7 +72,7 @@
 		color: $gray-base;
 
 		&--req:after{
-			content: '*';
+			content: ' *';
 			color: $red;
 		}
 	}
@@ -88,7 +88,60 @@
 		@include prefixes(box-sizing, border-box);
 	}
 
+	&__radio{
+		display: inline-block;
+		padding-bottom: 14px;
+		width: 100%;
+		vertical-align: middle;
+		@include fonter(18px,26px);
+		font-weight: bold;
+		color: #000;
+		
+
+		&:before{
+			content: '';
+			display: inline-block;
+			margin-right: 6.5%;
+			width: 22px;
+			height: 22px;
+			border:17px solid $gray-lighten;
+			border-radius: 50%;
+			vertical-align: middle;
+			background-color: $gray-lighten;
+		}
+	}
+
+		&__checkbox{
+		display: inline-block;
+		padding-bottom: 14px;
+		width: 100%;
+		vertical-align: middle;
+		@include fonter(18px,26px);
+		font-weight: bold;
+		color: #000;
+		
+
+		&:before{
+			content: '';
+			display: inline-block;
+			margin-right: 6.5%;
+			width: 56px;
+			height: 56px;
+			border-radius: 3px;
+			vertical-align: middle;
+			background-color: $gray-lighten;
+		}
+	}
+}
 
 
+input[type="radio"]:checked + label:before{
+	background-color: $gray-base;
+}
+
+input[type="checkbox"]:checked + label:before{
+	background-image: url("../img/checkbox.png");
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
