--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,4 +7,6 @@
 @import './layout/container';
 @import './pages/index';
 @import './pages/form';
-@import './blocks/counter'
+@import './blocks/counter';
+@import './blocks/gallery';
+@import './blocks/travelers';
