--- a/sass/layout/container.scss
+++ b/sass/layout/container.scss
@@ -2,4 +2,13 @@
 	min-width: 320px;
 	max-width: 480px;
 	margin: 0 auto;
+	background-color: #fff;
+    box-shadow: 5px 0px 10px 0px rgba(0, 0, 0, 0.1), -5px 0px 10px 0px rgba(0, 0, 0, 0.1);
+}
+
+@media(min-width:768px){
+	.container{
+		min-width: 768px;
+		max-width: 1200px;
+	}
 }
