--- a/sass/blocks/counter.scss
+++ b/sass/blocks/counter.scss
@@ -51,3 +51,20 @@
 		opacity: 0.3;
 	}	
 }
+
+@media(min-width: 768px){
+	.counter{
+		&__btn{
+			width: 33.33%;
+		}
+		&__input{
+			width: 100%;
+		}
+		&__display{
+			width: 33.33%
+		}
+		&__right{
+			display: none;
+		}
+	}
+}
