--- a/sass/pages/form.scss
+++ b/sass/pages/form.scss
@@ -1,9 +1,8 @@
 .intro{
 	position: relative;
-    height: 158px;
-    background: url("../img/bg-sedona.jpg") no-repeat 50% 40%;
-    padding: 49px 0 47px 0;
-    background-size: 100%;
+    background: url("../img/photo-background@1x.jpg") no-repeat 50% 40%;
+    padding: 49px 0 80px 0;
+    background-size: cover;
 
 	&:before{
 		content: '';
@@ -11,7 +10,8 @@
 		margin: 0 auto;
 		width: 174px;
 		height: 30px;
-		background: url('../img/bg-sedona-title.png');
+		background: url('../img/text-sedona.svg');
+		background-size: cover;
 	}
 	
 
@@ -27,7 +27,7 @@
 	}
 }
 .intro-text{
-	padding-top: 76px;
+	padding: 76px 6.5% 0 6.5%;
 	text-align: center;
 	border-bottom: 1px solid $gray-lighter;
 	&__title{
@@ -81,6 +81,10 @@
 			content: ' *';
 			color: $red;
 		}
+
+		&--tablet{
+			display: none;
+		}
 	}
 
 	&__input{
@@ -118,18 +122,14 @@
 	}
 
 		&__checkbox{
-		display: inline-block;
+		display: block;
 		padding-bottom: 24px;
-		width: 100%;
 		vertical-align: middle;
 		@include fonter(18px,26px);
 		font-weight: bold;
 		color: #000;
 		
-		&:last-child{
-			padding-bottom: 0;
-		}
-
+		
 		&:before{
 			content: '';
 			display: inline-block;
@@ -146,7 +146,7 @@
 		display: block;
 		margin-bottom: 40px;
 		width: 100%;
-		padding: 6% 0;
+		padding: 16px 0;
 		@include fonter(21px,26px);
 		font-weight: bold;
 		text-transform: uppercase;
@@ -156,6 +156,7 @@
 		background-color: $blue-base;
 		color: #fff;
 		cursor: pointer;
+		box-sizing:border-box;
 
 	}	
 	
