--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,3 +11,7 @@
 @import './blocks/gallery';
 @import './blocks/travelers';
 @import './layout/clearfix';
+@import './layout/flexbox';
+@import './pages/form-md';
+@import './blocks/popup-error';
+@import './blocks/popup-ok';
