--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,7 +1,10 @@
 $font-base: "PT Sans", Arial, sans-serif;
 $blue-base: #81b3d2;
+$blue-hover:#669ec0;
+$blue-active:#5496bd;
 $gray-base: #333333;
 $gray-lighter: #e5e5e5;
 $gray-lighten: #f2f2f2;
 $gray-trans:#b8b8b8;
+$gray-active:#d5d5d5;
 $red: #ff0000;
