--- a/sass/blocks/nav.scss
+++ b/sass/blocks/nav.scss
@@ -6,6 +6,7 @@
 		border-top:1px solid #9ac2db;
 		border-bottom:1px solid #678fa8;
 		
+
 		&:last-child{
 			border-bottom: none;
 			box-shadow: inset 0 -10px 10px -10px #363636;
@@ -13,6 +14,21 @@
 		
 		&:first-child{
 			border-top: 1px solid $blue-base;
+			&:hover{
+				border-top: 1px solid $blue-base;
+			}
+		}
+
+		&:hover{
+			background-color: $blue-hover;
+			border-top: 1px solid #86b2cd;	
+		}
+		&:active{
+			background-color: $blue-active;
+			border-top: 1px solid #77acca;
+		}
+		&:active a{
+			color: #94b9d2;
 		}
 	}
 	
@@ -118,7 +134,12 @@
 			border-top:1px solid #fff;
 			border-bottom:1px solid #fff;
 			&:first-child{
-			border-top: 1px solid #fff;
+				border-top: 1px solid #fff;
+				&:hover{
+					background-color: #fff;
+					border-top:1px solid #fff;
+					border-bottom:1px solid #fff;
+				}
 			}
 			&:last-child{
 				box-shadow: none;
@@ -128,6 +149,34 @@
 			}
 			&--right{
 				float: right;
+			}
+			&:hover{
+				background-color: #fff;
+				border-top:1px solid #fff;
+				border-bottom:1px solid #fff;
+				& a{
+					color: $blue-base;
+				}
+			}
+			&:active{
+				background-color: none;
+				border-top:1px solid #fff;
+				border-bottom:1px solid #fff;
+			}
+			&:active a{
+				opacity: 0.3;
+				color: #000;
+			}
+			&--active{
+				& a{
+					color:#766357;
+				}
+				&:hover a{
+					color: #604e43;
+				}
+				&:active a{
+					opacity: 0.3;
+				}
 			}
 		}
 		&__link{
