--- a/sass/layout/container.scss
+++ b/sass/layout/container.scss
@@ -1,7 +1,7 @@
 .container{
 	position: relative;
 	min-width: 320px;
-	max-width: 480px;
+	// max-width: 667px;
 	margin: 0 auto;
 	background-color: #fff;
     box-shadow: 5px 0px 10px 0px rgba(0, 0, 0, 0.1), -5px 0px 10px 0px rgba(0, 0, 0, 0.1);
