--- a/sass/pages/form.scss
+++ b/sass/pages/form.scss
@@ -96,6 +96,15 @@
 		background-color: $gray-lighten;
 		border: none;
 		@include prefixes(box-sizing, border-box);
+		&:hover{
+			background-color: $gray-lighter;
+		}
+		&:focus{
+			background-color: #FFF;
+			border: 4px solid $gray-lighter;
+			outline: none;
+			padding: 12px 16px;
+		}
 	}
 
 	&__radio{
@@ -172,10 +181,46 @@
 input[type="radio"]:checked + label:before{
 	background-color: $gray-base;
 }
-
+input[type="radio"] + label:hover{
+	&:before{
+		border-color: $gray-lighter;
+		background-color: $gray-lighter;
+	}
+}
+input[type="radio"]:checked + label:hover{
+	&:before{
+		background-color: $gray-base;
+	}
+}
+input[type="radio"] + label:active{
+	&:before{
+		border-color: $gray-active;
+		background-color: $gray-active;
+	}
+}
+input[type="radio"]:checked + label:active{
+	&:before{
+		background-color: #a4a4a4;
+	}
+}
 input[type="checkbox"]:checked + label:before{
 	background-image: url("../img/checkbox.png");
 	background-position: center;
 	background-repeat: no-repeat;
 }
+input[type="checkbox"] + label:hover{
+	&:before{
+		background-color: $gray-lighter;
+	}
+}
 
+input[type="checkbox"] + label:active{
+	&:before{
+		background-color: $gray-active;
+	}
+}
+input[type="checkbox"]:checked + label:active{
+	&:before{
+		background-image: url("../img/checkbox--active.png");
+	}
+}
