--- a/sass/blocks/popup-ok.scss
+++ b/sass/blocks/popup-ok.scss
@@ -37,6 +37,13 @@
 			text-decoration: none;
 			text-transform: uppercase;
 			cursor: pointer;
+			&:hover{
+			background-color: $blue-hover;
+			}
+			&:active{
+			background-color: $blue-active;
+			color: #94b9d2;
+			}
 		}
 	}
 }
