--- a/sass/blocks/counter.scss
+++ b/sass/blocks/counter.scss
@@ -76,3 +76,67 @@
 		}
 	}
 }
+@media(min-width: 1200px){
+	.counter{
+	text-align: center;
+	margin-bottom:10px;
+	&__btn{
+		display: block;
+		float: left;
+		padding: 0;
+		width: 61px;
+		height: 58px;
+		border: none;
+		background-color: $gray-lighten;
+		@include fonter(20px, 58px);
+		font-weight: bold;
+		color: $gray-trans;
+		&:hover{
+			background-color: $gray-lighter;
+			color: #8c8c8c;
+		}
+		&:active{
+			background-color: $gray-active;
+			color: #c4c4c4;
+		}
+		&:last-child{
+			float:right;
+		}
+	}
+
+
+	&__display{
+		display: inline-block;
+		margin: 0 auto;
+		width: 52%;
+		height: 58px;
+		background-color: $gray-lighten;
+		
+	}
+
+	&__input{
+		display: block;
+		float: left;
+		box-sizing: border-box;
+		width: 50%;
+		margin:0;
+		padding: 16px 20px;
+		border: none;
+		outline: none;
+		@include fonter(18px, 26px);
+		font-weight: bold;
+		text-align: center;
+		background-color: transparent;
+	}
+
+	&__right{
+		display: block;
+		float: right;
+		width: 50%;
+		padding:16px 0;
+		@include fonter(18px, 26px);
+		font-weight: bold;
+		opacity: 0.3;
+	}	
+}
+}
