--- a/sass/blocks/gallery.scss
+++ b/sass/blocks/gallery.scss
@@ -83,3 +83,23 @@
 		}
 	}	
 }
+@media(min-width: 1200px){
+	.gallery{
+		padding: 35px 0px;
+		&__item{
+			width: 140px;
+			margin-right: 65px;
+			&:nth-child(3n){
+				margin-right:65px;
+			}
+				&:nth-child(5n){
+			margin-right:0;
+			}
+		}
+		&__img-wrap{
+			width: 140px;
+			margin-right: 65px
+			
+		}
+	}
+}
