--- a/sass/layout/container.scss
+++ b/sass/layout/container.scss
@@ -1,7 +1,7 @@
 .container{
 	position: relative;
-	// min-width: 320px;
-	width: 320px;
+	min-width: 320px;
+	// width: 320px;
 	margin: 0 auto;
 	background-color: #fff;
     box-shadow: 5px 0px 10px 0px rgba(0, 0, 0, 0.1), -5px 0px 10px 0px rgba(0, 0, 0, 0.1);
@@ -9,16 +9,16 @@
 
 @media(min-width:768px){
 	.container{
-		// min-width: 768px;
-		// max-width: 1199px;
-		width: 768px;
+		min-width: 768px;
+		max-width: 1199px;
+		// width: 768px;
 	}
 }
 
 @media(min-width:1200px){
 	.container{
-		// min-width: 1200px;
-		// max-width: 1400px;
-		width: 1200px;
+		min-width: 1200px;
+		max-width: 1400px;
+		// width: 1200px;
 	}
 }
