--- a/sass/blocks/counter.scss
+++ b/sass/blocks/counter.scss
@@ -48,6 +48,15 @@
 		font-weight: bold;
 		text-align: center;
 		background-color: transparent;
+		&:hover{
+			background-color: $gray-lighter;
+		}
+		&:focus{
+			background-color: #FFF;
+			border: 4px solid $gray-lighter;
+			outline: none;
+			padding: 12px 16px;
+		}
 	}
 
 	&__right{
