fix bug bgz: cover

--- a/sass/blocks/nav.scss
+++ b/sass/blocks/nav.scss
@@ -95,6 +95,7 @@
 		width: 138px;
 		height: 70px;
 		background-image: url('../img/logo.png');
+		background-size: cover;
 		z-index: 1;
 	}
 	&__burger{
