--- a/sass/layout/retina.scss
+++ b/sass/layout/retina.scss
@@ -2,9 +2,11 @@
 	
 	.intro{
     	background: url("../img/photo-background@2x.jpg") no-repeat;
+    	background-size: cover;
     }
     .main-intro{
     	background: url("../img/photo-background@2x.jpg") no-repeat;
+    	background-size: cover;
     }
 
     .navigation__logo{
@@ -13,14 +15,17 @@
 
 	.reasons__image--city{
 		background-image: url("../img/photo-city@2x.jpg");
+		background-size: cover;
 	}
    .reasons__image--bridge{
 		background-image: url("../img/photo-bridge@2x.jpg");
+		background-size: cover;
    }
 }
 
 @media(min-resolution: 2.5dppx){
 	.navigation__logo{
 		background-image: url('../img/logo-sedona@3x.png');
+		background-size: cover;
 	}
 }
