--- a/sass/layout/container.scss
+++ b/sass/layout/container.scss
@@ -17,8 +17,6 @@
 
 @media(min-width:1200px){
 	.container{
-		min-width: 1200px;
-		max-width: 1400px;
-		// width: 1200px;
+		width: 1200px;
 	}
 }
